--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Chatbot IA - Vende 24/7 | Automatiza tu Negocio</title>
     <meta name="description" content="Transforma tu página web con un chatbot inteligente. Aumenta tus ventas, captura más leads y ofrece atención al cliente 24/7 con IA. Descubre nuestros planes.">
       
-    <link href="/dist/output.css" rel="stylesheet">
+    <link href="    /output.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
